// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`design tokens matches dark token snapshot 1`] = `
{
  "background": "#0B0F0E",
  "border": "#1F2A28",
  "destructive": "#DC2626",
  "foreground": "#E5E7EB",
  "muted": "#9CA3AF",
  "primary": "#508C7E",
  "secondary": "#D3EDE6",
  "success": "#16A34A",
  "warning": "#F59E0B",
}
`;

exports[`design tokens matches light token snapshot 1`] = `
{
  "background": "#F9F9F9",
  "border": "#E5E7EB",
  "destructive": "#DC2626",
  "foreground": "#111827",
  "muted": "#9CA3AF",
  "primary": "#508C7E",
  "secondary": "#D3EDE6",
  "success": "#16A34A",
  "warning": "#F59E0B",
}
`;
